[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Merkurial_Image_FileSystem"
version = "0.0.0"
authors = [
    {name="Brandon Marcure", email="brandon@merkurialphoenix.com"}
]
description="""Categorizes Text Based On A Dictionary Of Lists Of Strings And Callbacks
If Needed. Essentially A Template Is Created And Then It Does Its Work. It Then Moves The File Or File Into A Directory
And Accompanying Sub-Directories Based From The Root Directory Provided, Followed By The Categories Decided Upon,
And Lastly The Final Directory With All Its Contents Will Be In Placed Into The Last Sub Category.
The End Result Will Look Like: <root_dir>/[...categories]/<categorized_folder_name>/[...files_within_folder].
"""

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ArisenPhoenix/ImageFileSystem"
"Bug Tracker" = "https://github.com/ArisenPhoenix/ImageFileSystem/issues"